ComputeLab/K8s/Clusters/k8s-room/mail/mailu-ep.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mailu-web
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.2.145  # IP address of external service
    ports:
      - name: http
        port: 80
      - name: https
        port: 443
