ComputeLab/K8s/Clusters/k8s-room/mail/mailu-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailu-web
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
