ComputeLab/K8s/Clusters/k8s-room/mail/mail-andennis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "mail.andennis.com"
  namespace: default
  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mail.andennis.com
      http:
        paths:
          - backend:
              service:
                name: mailu-web
                port:
                  number: 80
            path: /.well-known/acme-challenge/
            pathType: Prefix
          - backend:
              service:
                name: mailu-web
                port:
                  number: 443
            path: /
            pathType: Prefix
